@@ -5,7 +5,6 @@ import java.util.List;
 import java.util.Objects;
 import java.util.Set;
 import java.util.stream.Collectors;
-
 import lombok.RequiredArgsConstructor;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Lazy;
@@ -16,18 +15,19 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import ru.sfedu.teamselection.domain.Student;
 import ru.sfedu.teamselection.domain.Team;
+import ru.sfedu.teamselection.domain.Technology;
 import ru.sfedu.teamselection.domain.User;
 import ru.sfedu.teamselection.dto.TechnologyDto;
-import ru.sfedu.teamselection.dto.student.StudentDto;
 import ru.sfedu.teamselection.dto.team.TeamCreationDto;
-import ru.sfedu.teamselection.dto.team.TeamDto;
 import ru.sfedu.teamselection.dto.team.TeamSearchOptionsDto;
+import ru.sfedu.teamselection.dto.team.TeamUpdateDto;
 import ru.sfedu.teamselection.exception.ConstraintViolationException;
 import ru.sfedu.teamselection.exception.ForbiddenException;
 import ru.sfedu.teamselection.exception.NotFoundException;
 import ru.sfedu.teamselection.mapper.ProjectTypeMapper;
 import ru.sfedu.teamselection.mapper.TechnologyMapper;
 import ru.sfedu.teamselection.mapper.team.TeamCreationDtoMapper;
+import ru.sfedu.teamselection.mapper.team.TeamUpdateDtoMapper;
 import ru.sfedu.teamselection.repository.ProjectTypeRepository;
 import ru.sfedu.teamselection.repository.TeamRepository;
 import ru.sfedu.teamselection.repository.TechnologyRepository;
@@ -48,6 +48,7 @@ public class TeamService {
     private final TechnologyMapper technologyDtoMapper;
     private final ProjectTypeMapper projectTypeDtoMapper;
     private final TeamCreationDtoMapper teamCreationDtoMapper;
+    private final TeamUpdateDtoMapper teamUpdateDtoMapper;
 
     /**
      * Find Team entity by id
@@ -69,7 +70,14 @@ public class TeamService {
     }
 
     /**
-     * Performs search across all students with given filter criteria and pagination
+     * Performs search across all students with given filter criteria
+     * @param like like parameter for the student string representation
+     * @param trackId team is assigned to this track
+     * @param isFull is team full of students
+     * @param projectType project type defined by team's captain
+     * @param technologies team's technologies(skills)
+     * @param pageable pageable
+     * @return the filtered list
      */
     public Page<Team> search(String like,
                              Long trackId,
@@ -231,52 +239,57 @@ public class TeamService {
      * Updates entity using data given in dto
      * # WARNING: unsafe method. No business-logic validation is performed here depending on sender authorities.
      * @param id id of entity
-     * @param dto dto containing updated values
      * @return updated entity
      * @apiNote   possibly UNSAFE
      */
     @Transactional
-    public Team update(Long id, TeamDto dto, User sender) {
+    public Team update(Long id,
+                       TeamUpdateDto dto,
+                       User sender) {
+        Team partial = teamUpdateDtoMapper.toEntity(dto);
+
         Team team = findByIdOrElseThrow(id);
 
+
         boolean isAdmin = isAdmin(sender);
-        boolean isCaptainOfThis = sender.getId()
-                .equals(studentService.findByIdOrElseThrow(team.getCaptainId()).getUser().getId());
+        boolean isCaptainOfThis = sender.getId();
 
-        if (!isAdmin && !isCaptainOfThis) {
-            throw new ForbiddenException("Only admin or the team’s captain can modify this team");
+        if (!isAdmin && !isCaptain) {
+            throw new ForbiddenException("Only admin or captain");
         }
 
-
+        // Только admin может менять эти поля:
         if (isAdmin) {
-            team.setName(dto.getName());
-            team.setQuantityOfStudents(dto.getQuantityOfStudents());
-            team.setIsFull(dto.getIsFull());
-            if (!Objects.equals(dto.getCurrentTrackId(), team.getCurrentTrack().getId())) {
-                team.setCurrentTrack(trackService.findByIdOrElseThrow(dto.getCurrentTrackId()));
+            team.setName(partial.getName());
+            team.setIsFull(partial.getIsFull());
+            if (!Objects.equals(partial.getCurrentTrack().getId(),
+                    team.getCurrentTrack().getId())) {
+                team.setCurrentTrack(
+                        trackService.findByIdOrElseThrow(partial.getCurrentTrack().getId())
+                );
             }
-            team.setCaptainId(dto.getCaptain().getId());
+            team.setCaptainId(partial.getCaptainId());
         }
 
-        team.setProjectDescription(dto.getProjectDescription());
-        team.setProjectType(projectTypeDtoMapper.mapToEntity(dto.getProjectType()));
+        // Всегда можно менять:
+        team.setProjectDescription(partial.getProjectDescription());
+        team.setProjectType(partial.getProjectType());
         team.setTechnologies(
                 technologyRepository.findAllByIdIn(
-                        dto.getTechnologies().stream().map(TechnologyDto::getId).toList()
+                        partial.getTechnologies()
+                                .stream()
+                                .map(Technology::getId)
+                                .collect(Collectors.toList())
                 )
         );
 
-
-        List<Long> newStudentIds = dto.getStudents().stream()
-                .map(StudentDto::getId)
-                .toList();
+        List<Long> newStudentIds = dto.getStudentIds();
         Set<Long> currentIds = team.getStudents().stream()
                 .map(Student::getId)
                 .collect(Collectors.toSet());
 
         for (Student s : new ArrayList<>(team.getStudents())) {
             if (!newStudentIds.contains(s.getId())) {
-
                 removeStudentFromTeam(team, s);
             }
         }
@@ -291,39 +304,6 @@ public class TeamService {
         return teamRepository.save(team);
     }
 
-
-    /**
-     * Performs search across all students with given filter criteria
-     * @param like like parameter for the student string representation
-     * @param trackId team is assigned to this track
-     * @param isFull is team full of students
-     * @param projectType project type defined by team's captain
-     * @param technologies student's technologies(skills)
-     * @return the filtered list
-     */
-    public List<Team> search(String like,
-                             Long trackId,
-                             Boolean isFull,
-                             String projectType,
-                             List<Long> technologies) {
-        Specification<Team> specification = Specification.allOf();
-        if (like != null) {
-            specification = specification.and(TeamSpecification.like(like));
-        }
-        if (trackId != null) {
-            specification = specification.and(TeamSpecification.byTrack(trackId));
-        }
-        if (isFull != null) {
-            specification = specification.and(TeamSpecification.byIsFull(isFull));
-        }
-        if (projectType != null) {
-            specification = specification.and(TeamSpecification.byProjectType(projectType));
-        }
-        specification = specification.and(TeamSpecification.byTechnologies(technologies));
-
-        return teamRepository.findAll(specification);
-    }
-
     public int getSecondYearsCount(Team team) {
         int res = 0;
         for (Student student: team.getStudents()) {
@@ -336,7 +316,7 @@ public class TeamService {
 
     @Transactional(readOnly = true)
     public TeamSearchOptionsDto getSearchOptionsTeams(Long trackId) {
-        var teams = search(null, trackId, null, null, null);
+        var teams = search(null, trackId, null, null, null, Pageable.unpaged());
         TeamSearchOptionsDto teamSearchOptionsDto = new TeamSearchOptionsDto();
         teamSearchOptionsDto
                 .getProjectTypes()
